fix spacing of header

--- a/src/components/page-header/page-header.module.scss
+++ b/src/components/page-header/page-header.module.scss
@@ -2,9 +2,10 @@
 
 .headerContainer {
     flex-direction: row;
-    justify-content: space-around;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
     padding: 0px;
+    display: flex;
 }
 
 .pageHeader {
